--- a/app/src/main/res/layout/cell_item.xml
+++ b/app/src/main/res/layout/cell_item.xml
@@ -20,7 +20,9 @@
         android:gravity="center"
         android:textSize="22sp"
         android:textStyle="bold"
+        app:isFlag="@{cell.isFlag}"
         app:isMine="@{cell.isMine}"
+        app:isOpen="@{cell.isOpen}"
         app:minesNearBy="@{cell.minesNearBy}"
         tools:text="7" />
 </layout>
