--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -20,7 +20,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@color/teal_200"
+            android:background="@color/lt_gray"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +40,10 @@
                 app:layout_constraintWidth_percent="0.3"
                 tools:text="mines left" />
 
-            <Button
+            <TextView
+                android:text="😎"
+                android:textSize="50dp"
+                android:gravity="center"
                 android:id="@+id/new_game_button"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
