--- a/app/src/main/res/layout/cell_item.xml
+++ b/app/src/main/res/layout/cell_item.xml
@@ -23,6 +23,7 @@
         app:isFlag="@{cell.isFlag}"
         app:isMine="@{cell.isMine}"
         app:isOpen="@{cell.isOpen}"
+        app:isWrongCell="@{cell.isWrongCell}"
         app:minesNearBy="@{cell.minesNearBy}"
         tools:text="7" />
 </layout>
