--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -30,11 +30,14 @@
             <TextView
                 android:id="@+id/mines_left"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
+                android:background="@color/black"
                 android:gravity="center"
+                android:padding="4dp"
                 android:text="@{viewModel.minesLeft.toString()}"
-                android:textColor="@color/dark_red"
-                android:textSize="50sp"
+                android:textColor="@color/red"
+                android:textSize="40sp"
+                app:layout_constraintBottom_toTopOf="@id/recycler"
                 app:layout_constraintDimensionRatio="3:2"
                 app:layout_constraintStart_toStartOf="@id/recycler"
                 app:layout_constraintTop_toTopOf="parent"
@@ -59,11 +62,14 @@
             <TextView
                 android:id="@+id/timer"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
+                android:background="@color/black"
                 android:gravity="center"
+                android:padding="4dp"
                 android:text="000"
-                android:textColor="@color/dark_red"
-                android:textSize="50sp"
+                android:textColor="@color/red"
+                android:textSize="40sp"
+                app:layout_constraintBottom_toTopOf="@id/recycler"
                 app:layout_constraintDimensionRatio="3:2"
                 app:layout_constraintEnd_toEndOf="@id/recycler"
                 app:layout_constraintTop_toTopOf="parent"
@@ -73,9 +79,7 @@
                 android:id="@+id/recycler"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_margin="8dp"
                 android:background="@color/black"
                 android:padding="1dp"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
