--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,5 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="lt_gray">#FFD3D3D3</color>
-    <color name="dark_red">#8B0000</color>
+    <color name="red">#FFFF0000</color>
 </resources>
