--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -66,14 +66,15 @@
                 android:background="@color/black"
                 android:gravity="center"
                 android:padding="4dp"
-                android:text="000"
+                android:text="@{viewModel.time.toString()}"
                 android:textColor="@color/red"
                 android:textSize="40sp"
                 app:layout_constraintBottom_toTopOf="@id/recycler"
                 app:layout_constraintDimensionRatio="3:2"
                 app:layout_constraintEnd_toEndOf="@id/recycler"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.3" />
+                app:layout_constraintWidth_percent="0.3"
+                tools:text="123" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler"
