--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -34,7 +34,7 @@
                 android:background="@color/black"
                 android:gravity="center"
                 android:padding="4dp"
-                android:text="@{viewModel.minesLeft.toString()}"
+                android:text="@{viewModel.intToThreeIntString(viewModel.minesLeft)}"
                 android:textColor="@color/red"
                 android:textSize="40sp"
                 app:layout_constraintBottom_toTopOf="@id/recycler"
@@ -66,7 +66,7 @@
                 android:background="@color/black"
                 android:gravity="center"
                 android:padding="4dp"
-                android:text="@{viewModel.time.toString()}"
+                android:text="@{viewModel.intToThreeIntString(viewModel.time)}"
                 android:textColor="@color/red"
                 android:textSize="40sp"
                 app:layout_constraintBottom_toTopOf="@id/recycler"
@@ -74,7 +74,7 @@
                 app:layout_constraintEnd_toEndOf="@id/recycler"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintWidth_percent="0.3"
-                tools:text="123" />
+                tools:text="007" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler"
