trying make optimal layout

--- a/app/src/main/res/layout/cell_item.xml
+++ b/app/src/main/res/layout/cell_item.xml
@@ -10,11 +10,18 @@
             type="com.example.minesweeper.model.Cell" />
 
     </data>
-
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
     <TextView
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
         android:id="@+id/cell_text"
         android:layout_width="match_parent"
-        android:layout_height="34dp"
+        android:layout_height="0dp"
         android:layout_margin="1dp"
         android:background="@color/white"
         android:gravity="center"
@@ -26,4 +33,5 @@
         app:isWrongCell="@{cell.isWrongCell}"
         app:minesNearBy="@{cell.minesNearBy}"
         tools:text="7" />
+</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
