--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -74,15 +74,14 @@
                 android:layout_height="wrap_content"
                 android:background="@color/black"
                 android:gravity="center"
-                android:padding="4dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
                 android:text="@{viewModel.intToThreeIntString(viewModel.minesLeft)}"
                 android:textColor="@color/red"
-                android:textSize="40sp"
+                android:textSize="36sp"
                 app:layout_constraintBottom_toTopOf="@id/recycler"
-                app:layout_constraintDimensionRatio="3:2"
                 app:layout_constraintStart_toStartOf="@id/recycler"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.3"
                 tools:text="010" />
 
             <TextView
@@ -91,13 +90,13 @@
                 android:layout_height="0dp"
                 android:backgroundTint="@color/white"
                 android:gravity="center"
-                android:textSize="50sp"
+                android:textSize="36sp"
                 app:gameState="@{viewModel.gameState}"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.2"
+                app:layout_constraintTop_toTopOf="@id/mines_left"
+                app:layout_constraintBottom_toBottomOf="@id/mines_left"
                 tools:text="😎" />
 
             <TextView
@@ -106,15 +105,14 @@
                 android:layout_height="wrap_content"
                 android:background="@color/black"
                 android:gravity="center"
-                android:padding="4dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
                 android:text="@{viewModel.intToThreeIntString(viewModel.time)}"
                 android:textColor="@color/red"
-                android:textSize="40sp"
+                android:textSize="36sp"
                 app:layout_constraintBottom_toTopOf="@id/recycler"
-                app:layout_constraintDimensionRatio="3:2"
                 app:layout_constraintEnd_toEndOf="@id/recycler"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.3"
                 tools:text="007" />
 
             <androidx.recyclerview.widget.RecyclerView
