with images assets

--- a/app/src/main/res/layout/cell_item.xml
+++ b/app/src/main/res/layout/cell_item.xml
@@ -15,15 +15,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
+        <ImageView
             android:id="@+id/cell_text"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_margin="1dp"
-            android:background="@color/white"
-            android:gravity="center"
-            android:textSize="20sp"
-            android:textStyle="bold"
+            android:layout_margin="2px"
             app:isFlag="@{cell.isFlag}"
             app:isMine="@{cell.isMine}"
             app:isOpen="@{cell.isOpen}"
@@ -33,7 +29,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:minesNearBy="@{cell.minesNearBy}"
-            tools:text="7" />
+            app:minesNearBy="@{cell.minesNearBy}" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
