--- a/app/src/main/res/layout/cell_item.xml
+++ b/app/src/main/res/layout/cell_item.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <variable
             name="cell"
-            type="com.example.minesweeper.model.Cell" />
+            type="io.github.aeforeva.minesweeper.model.Cell" />
 
     </data>
 
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            tools:src="@drawable/close"
             android:id="@+id/cell_text"
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -29,6 +30,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:minesNearBy="@{cell.minesNearBy}" />
+            app:minesNearBy="@{cell.minesNearBy}"
+            tools:ignore="ContentDescription" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
