--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.minesweeper.ui.MainViewModel" />
+            type="io.github.aeforeva.minesweeper.ui.MainViewModel" />
 
     </data>
 
@@ -71,10 +71,10 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_marginBottom="8dp"
             android:id="@+id/constraintLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:background="@color/lt_gray"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -102,12 +102,14 @@
                 android:id="@+id/new_game_button"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:contentDescription="@string/new_game_button_desc"
                 app:gameState="@{viewModel.gameState}"
                 app:layout_constraintBottom_toBottomOf="@id/mines_left"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@id/mines_left" />
+                app:layout_constraintTop_toTopOf="@id/mines_left"
+                tools:src="@drawable/game_new" />
 
             <TextView
                 android:id="@+id/timer"
@@ -131,14 +133,14 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:background="@color/black"
-                android:padding="1dp"
+                android:padding="2px"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/new_game_button"
                 app:spanCount="10"
-                tools:itemCount="50"
+                tools:itemCount="100"
                 tools:listitem="@layout/cell_item" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
