--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
 
     <fragment
         android:id="@+id/oneFragment"
-        android:name="com.example.minesweeper.ui.OneFragment"
+        android:name="io.github.aeforeva.minesweeper.ui.OneFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_one">
         <action
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/scoreFragment"
-        android:name="com.example.minesweeper.ui.ScoreFragment"
+        android:name="io.github.aeforeva.minesweeper.ui.ScoreFragment"
         android:label="@string/high_scores"
         tools:layout="@layout/fragment_score">
         <action
